[package]
name = "kioto"
version = "0.1.0"
edition = "2021"

[dependencies]
reality = { path = "../reality" }
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
tokio-native-tls = "0.3.1"
url = { version = "2.5.2", features = ["serde"] }
hyper = { version = "1.4.1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.8", features = ["client", "http1", "http2", "tokio"] }
http-body-util = "0.1.2"
tracing = "0.1.40"
bytes = "1.7.1"
clap = { version = "4.5.17", features = ["derive"] }
toml_edit = "0.22.21"
shlex = "1.3.0"
toml = "0.8.19"
hex = "0.4.3"
