[package]
name = "reality"
version = "0.1.0"
edition = "2021"

[dependencies]
runir = { path = "../runir" }
semver = "1.0.23"
tokio = { version = "1.40.0", features = ["rt", "macros", "time"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-test = "0.2.5"
uuid = { version = "1.10.0", features = ["v4"] }
