[package]
name = "runplat-macros"
description = "Provides various derive and other macros for runplat collection"
authors = ["juliusl@microsoft.com"]
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
syn = { version = "2.0", features = [ "full" ] }
quote = "1.0"

[lib]
proc-macro = true
